--- a/frontend/reactform/src/App.css
+++ b/frontend/reactform/src/App.css
@@ -2,6 +2,13 @@
   text-align: center;
 }
 
+.wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height:100vh;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
